--- a/src/pharmacy/management/system/Login.fxml
+++ b/src/pharmacy/management/system/Login.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -9,8 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="25.0" style="-fx-background-color: #d2deef;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
+<VBox alignment="CENTER" spacing="25.0" style="-fx-background-color: #d2deef;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
    <children>
       <ImageView fx:id="logo" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -36,4 +36,10 @@
          </children>
       </HBox>
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
+   <padding>
+      <Insets bottom="100.0" left="150.0" right="150.0" top="100.0" />
+   </padding>
 </VBox>
