--- a/src/pharmacy/management/system/Manager.fxml
+++ b/src/pharmacy/management/system/Manager.fxml
@@ -17,11 +17,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox style="-fx-background-color: #e3f9f1;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.ManagerController">
+<VBox fx:id="pane" prefHeight="768.0" prefWidth="1366.0" style="-fx-background-color: #e3f9f1;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.ManagerController">
    <children>
       <HBox alignment="CENTER" spacing="25.0">
          <children>
-            <TextField fx:id="searchBox" prefWidth="250.0" promptText="Search" style="-fx-background-color: #c7d4e8; -fx-background-radius: 25; -fx-background-image: url('/images/search2.png'); -fx-background-position: right center; -fx-background-repeat: no-repeat;">
+            <TextField fx:id="searchBox" prefHeight="40.0" prefWidth="250.0" promptText="Search" style="-fx-background-color: #c7d4e8; -fx-background-radius: 25; -fx-background-image: url('/images/search2.png'); -fx-background-position: right center; -fx-background-repeat: no-repeat;">
                <contextMenu>
                   <ContextMenu>
                     <items>
@@ -29,6 +29,18 @@
                     </items>
                   </ContextMenu>
                </contextMenu>
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="7.0" left="10.0" right="25.0" top="7.0" />
+               </padding>
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </TextField>
             <Region prefHeight="90.0" prefWidth="191.0" HBox.hgrow="ALWAYS" />
             <HBox spacing="3.0">
@@ -43,13 +55,13 @@
                         <HBox alignment="CENTER_LEFT">
                            <children>
                               <Label text="Name: " />
-                              <Label fx:id="employeeName" text="Label" />
+                              <Label fx:id="employeeName" style="-fx-text-fill: blue;" text="Label" />
                            </children>
                         </HBox>
                         <HBox alignment="CENTER_LEFT">
                            <children>
                               <Label text="Username: " />
-                              <Label fx:id="employeeUsername" text="Label" />
+                              <Label fx:id="employeeUsername" style="-fx-text-fill: blue;" text="Label" />
                            </children>
                         </HBox>
                      </children>
@@ -59,8 +71,7 @@
                   </VBox>
                   <MenuButton alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="32.0" style="-fx-background-radius: 0;" textAlignment="CENTER">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Action 1" />
-                        <MenuItem mnemonicParsing="false" text="Action 2" />
+                        <MenuItem mnemonicParsing="false" text="Log out" />
                      </items>
                      <font>
                         <Font size="12.0" />
@@ -99,12 +110,12 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #40bde4; -fx-border-color: black;" text="new" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button fx:id="newInvoice" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToNewInvoice" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #40bde4; -fx-border-color: black;" text="New" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #40bde4; -fx-border-color: black;" text="old" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#goToOldInvoice" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #40bde4; -fx-border-color: black;" text="Old" textFill="WHITE" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
@@ -129,72 +140,72 @@
                   <Font name="Engravers MT" size="18.0" />
                </font>
             </Label>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="add" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToAddMedicine" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Add" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #a86fe2; -fx-border-color: black;" text="add" textFill="WHITE" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToAddEmployee" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #a86fe2; -fx-border-color: black;" text="Add" textFill="WHITE" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #a86fe2; -fx-border-color: black;" text="edit" textFill="WHITE" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToEditEmployee" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #a86fe2; -fx-border-color: black;" text="Edit" textFill="WHITE" GridPane.columnIndex="3" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="add expenditure" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToAddExpenditure" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="Add Expenditure" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New Bold" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="edit" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToEditMedicine" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Edit" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="contact supplier" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToContactSupplier" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="Contact Supplier" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New Bold" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="expire soon" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToExpireSoon" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Expire Soon" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="expired" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToExpired" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Expired" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="low quantity" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToShortStorage" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Short Storage" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="not exist" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#GoToNotExist" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Not Exist" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="show all" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToShowAll" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #d8395e; -fx-border-color: black;" text="Show All" textFill="WHITE" GridPane.columnIndex="2" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New" size="18.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="month profit" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToMonthProfit" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="Month Profit" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New Bold" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="total in price" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToTotalInPrice" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="Total in price" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New Bold" size="14.0" />
                </font>
             </Button>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="total out price" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
+            <Button alignment="CENTER" mnemonicParsing="false" onAction="#goToTotalOutPrice" prefHeight="150.0" prefWidth="350.0" style="-fx-border-width: .1; -fx-background-radius: 0; -fx-background-color: #85f2cf; -fx-border-color: black;" text="Total out price" textFill="#070303" GridPane.columnIndex="4" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
                <font>
                   <Font name="Courier New Bold" size="14.0" />
                </font>
@@ -205,4 +216,7 @@
          </padding>
       </GridPane>
    </children>
+   <padding>
+      <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
+   </padding>
 </VBox>
