--- a/src/pharmacy/management/system/Login.fxml
+++ b/src/pharmacy/management/system/Login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" spacing="25.0" style="-fx-background-color: #d2deef;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
+<VBox alignment="CENTER" prefHeight="768.0" prefWidth="1366.0" spacing="25.0" style="-fx-background-color: #d2deef;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
    <children>
       <ImageView fx:id="logo" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
          <image>
