--- a/src/pharmacy/management/system/Login.fxml
+++ b/src/pharmacy/management/system/Login.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="CENTER" prefHeight="768.0" prefWidth="1366.0" spacing="25.0" style="-fx-background-color: #d2deef;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
+<VBox alignment="CENTER" prefHeight="768.0" prefWidth="1366.0" spacing="25.0" style="-fx-background-color: #9CB5DF;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pharmacy.management.system.LoginController">
    <children>
       <ImageView fx:id="logo" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -19,20 +18,18 @@
       </ImageView>
       <HBox alignment="CENTER" spacing="15.0">
          <children>
-            <Label text="Username" />
-            <TextField fx:id="username" prefHeight="25.0" prefWidth="200.0" promptText="username or e-mail" style="-fx-background-color: #f7f4f4; -fx-background-radius: 15;" />
+            <TextField fx:id="username" prefHeight="30.0" prefWidth="350.0" promptText="username or e-mail" style="-fx-background-color: #D3DEF1; -fx-background-radius: 30;" />
          </children>
       </HBox>
       <HBox alignment="CENTER" spacing="20.0">
          <children>
-            <Label text="Password" />
-            <PasswordField fx:id="password" prefHeight="25.0" prefWidth="200.0" promptText="password" style="-fx-background-color: #f7f4f4; -fx-background-radius: 15;" />
+            <PasswordField fx:id="password" prefHeight="30.0" prefWidth="350.0" promptText="password" style="-fx-background-color: #D3DEF1; -fx-background-radius: 30;" />
          </children>
       </HBox>
       <HBox alignment="CENTER" spacing="10.0">
          <children>
-          <Button fx:id="login" alignment="CENTER" minWidth="62.0" mnemonicParsing="false" onAction="#login" prefHeight="10.0" style="-fx-background-color: #086291; -fx-background-radius: 12.5;" text="Login" textFill="WHITE" />
-            <Button fx:id="cancel" mnemonicParsing="false" onAction="#exitProgram" style="-fx-background-color: #086291; -fx-background-radius: 12.5;" text="Cancel" textFill="WHITE" />
+          <Button fx:id="login" alignment="CENTER" mnemonicParsing="false" onAction="#login" prefHeight="10.0" prefWidth="70.0" style="-fx-background-color: #290049; -fx-background-radius: 5;" text="Login" textFill="WHITE" />
+            <Button fx:id="cancel" mnemonicParsing="false" onAction="#exitProgram" prefHeight="10.0" prefWidth="70.0" style="-fx-background-color: #290049; -fx-background-radius: 5;" text="Exit" textFill="WHITE" />
          </children>
       </HBox>
    </children>
